# contact-enrichment-tos

./: .editorconfig  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_GUIDE.md  Makefile  README.md  SUMMARY.md  WARP.md
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_non_vuln.yml
.github/workflows/: auto-request-reviewer.yml  codeql.yml  dependabot-auto-merge.yml  java-ci.yml  labeler.yml  rust-ci.yml  security-nightly.yml
deployments/: README.md
deployments/docker/: docker-compose.yml  test.sh
deployments/helm/contact-enrichment/: Chart.yaml  values-prod.example.yaml  values.yaml
deployments/helm/contact-enrichment/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deployments/nomad/: contact-enrichment.nomad.hcl
docs/: GITHUB_SETUP.md
docs/architecture/: DETAILED_ARCHITECTURE.md  OVERVIEW.md
docs/security/: SECURITY_ARCHITECTURE.md
docs/setup/: INSTALLATION.md
implementations/go/: go.mod
implementations/go/internal/domain/: contact.go
implementations/java/: Dockerfile  pom.xml
implementations/java/src/main/java/com/contactenrichment/: ContactEnrichmentApplication.java
implementations/java/src/main/java/com/contactenrichment/application/: ContactApplicationService.java  ContactService.java  SecurityContextProvider.java
implementations/java/src/main/java/com/contactenrichment/application/exceptions/: DuplicateResourceException.java
implementations/java/src/main/java/com/contactenrichment/config/: CacheConfiguration.java  PerformanceConfiguration.java  SecurityConfiguration.java  VirtualThreadConfiguration.java
implementations/java/src/main/java/com/contactenrichment/domain/model/: AttributeType.java  ConsentRecord.java  ConsentType.java  Contact.java  EncryptedValue.java  EnrichedAttribute.java  LegalBasis.java  SecurityLabel.java
implementations/java/src/main/java/com/contactenrichment/domain/repository/: ContactRepository.java
implementations/java/src/main/java/com/contactenrichment/infrastructure/audit/: AuditService.java  DefaultAuditService.java  OutboxEvent.java  OutboxEventRepository.java  OutboxPublisher.java
implementations/java/src/main/java/com/contactenrichment/infrastructure/crypto/: AwsKmsCryptoService.java  CryptoService.java
implementations/java/src/main/java/com/contactenrichment/infrastructure/persistence/: ContactRepositoryAdapter.java  OptimizedContactRepository.java  RlsSessionUtil.java  SpringDataContactRepository.java
implementations/java/src/main/java/com/contactenrichment/infrastructure/security/: SecurityContext.java  SecurityKernel.java  TrustedSecurityKernel.java
implementations/java/src/main/resources/: application.yml
implementations/java/src/test/java/com/contactenrichment/integration/: RlsIntegrationTest.java
implementations/java/src/test/resources/: application-test.yml
implementations/python/: pyproject.toml
implementations/python/src/contact_enrichment/api/: routes.py
implementations/python/src/contact_enrichment/domain/: contact.py
implementations/python/src/contact_enrichment/infrastructure/: crypto.py  repository.py  security.py
implementations/rust/: Cargo.toml
implementations/rust/src/: lib.rs  main.rs
implementations/rust/src/api/: handlers.rs  handlers_complete.rs  middleware.rs  mod.rs
implementations/rust/src/domain/: contact.rs  mod.rs
implementations/rust/src/infrastructure/: crypto.rs  mem_repository.rs  mod.rs  repository.rs  security.rs
implementations/rust/tests/: duplicates.rs  enrich_delete.rs  handlers.rs  pg_delete_rls.rs  pg_duplicates.rs  pg_rls.rs
scripts/selinux/: contact-enrichment.te  install-policy.sh
(+7 files in other folders)
